visual bug with grid items && fix promo-slider vertical alignment

--- a/src/scss/components/_card-product.scss
+++ b/src/scss/components/_card-product.scss
@@ -8,6 +8,10 @@
     }
   }
 
+  &--liner {
+    position: relative;
+  }
+
   &--wideimg {
     .k-figure {
       width: 100%;
@@ -26,9 +30,9 @@
     h3 {
       margin: 0;
       font-size: 120%;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
+      // white-space: nowrap;
+      // overflow: hidden;
+      // text-overflow: ellipsis;
 
       a {
         color: $black;
@@ -57,7 +61,8 @@
   }
 
   &--reviews {
-    position: relative;
+    position: absolute;
+    width: 100%;
 
     .k-accent-text {
       font-size: 80%;
@@ -65,9 +70,9 @@
 
     ul {
       position: absolute;
-      top: 0;
+      top: 50%;
       left: 50%;
-      transform: translateX(-50%);
+      transform: translate(-50%, -50%);
       list-style-type: none;
       padding: 0;
       margin: 0;
